# napari-czi-reader

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/napari_czi_reader/: czi_metadata_processor.py  czi_reader_CFIM.py  metadata_dump.py  napari.yaml
