[metadata]
name = napari-czi-reader
description = A Czi reader plugin for napari
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Markus L. Bille
author_email = github+markus@bille.dk
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Technology/Software Development :: Libraries :: Python Modules
url = https://github.com/MaxusTheOne/napari-pitcount-cfim

[options]
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
    aicsimageio
    aicspylibczi



[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-qt
    codecov
dev =
    napari[all]
    %(test)s



[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-czi-reader = napari_czi_reader:napari.yaml

[options.package_data]
napari_pitcount_cfim =
    napari.yaml

